--- a/detail-22-2021.html
+++ b/detail-22-2021.html
@@ -13,24 +13,27 @@
 		}
 
 		h2 {
-			text-align: center;
-			margin-top: 50px;
+			/*text-align: center;*/
+			margin-left: 230px;
+			margin-top: 20px;
 		}
 
 		h1 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 280px;
 		}
 
 		table {
 
-			margin-left: 300px;
+			margin-left: 25px;
+			border: 5px dashed black;
 		}
 
 		.assembly {
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 16px;
 			padding: 0 8px;
 			display: inline;
 		}
@@ -43,7 +46,7 @@
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 17px;
 			padding: 0 8px;
 		}
 
@@ -61,16 +64,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>275</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">275.Pandaveswar</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -78,7 +81,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>164291</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -97,9 +100,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -135,7 +138,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -166,23 +169,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>276</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">276.Durgapur (East)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -190,7 +193,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>192674</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -209,9 +212,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -247,7 +250,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -278,23 +281,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>277</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">277.Durgapur(West)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -302,7 +305,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>196902</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -321,9 +324,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -359,7 +362,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -390,23 +393,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>278</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">278.Raniganj</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -414,7 +417,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>182211</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -433,9 +436,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -471,7 +474,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -502,23 +505,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>279</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">279.Jamuria</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -526,7 +529,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -540,9 +543,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -578,7 +581,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -609,23 +612,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>280</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">280.Asansol(South)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -633,7 +636,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>194737</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -652,9 +655,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -690,7 +693,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -721,23 +724,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>281</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">281.Asansol(North)</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -745,7 +748,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>192907</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -764,9 +767,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -802,7 +805,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -833,23 +836,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>282</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">282.Kulti</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of <br>Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -857,7 +860,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote <br>polled</b></td>
 				<td>174767</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -876,9 +879,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -914,7 +917,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -945,23 +948,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Bardhaman (West)</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>283</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">283.Barabani</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -969,7 +972,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>169207</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -988,9 +991,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -1026,7 +1029,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -1057,7 +1060,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div>
 </body>
