--- a/detail-22-2021.html
+++ b/detail-22-2021.html
@@ -60,7 +60,11 @@
 
 </head>
 <body>
-<div>
+	<h2><a href="index.html"style="color:red">Go To Home Page</a></h2>
+
+	<h1>2021</h1>
+
+         <div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
