--- a/detail-1-2021.html
+++ b/detail-1-2021.html
@@ -26,7 +26,7 @@
 		table {
             /*margin-left: 250px;*/
 			margin-left: 25px;
-			border: 1px solid black;
+			border: 5px dashed black;
 		}
 
 		.assembly {
