--- a/detail-23-2021.html
+++ b/detail-23-2021.html
@@ -1112,10 +1112,10 @@
 
 				<tr>
 					<th>Serial <br>no.</th>
-					<th>Name of<br> Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of Candidate</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
